--- a/branches/light/.project
+++ b/branches/light/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>kharid</name>
+	<name>kharid_light</name>
 	<comment></comment>
 	<projects>
 	</projects>
